# Libre-Network

./: README.md  blockchain.py  config.py  consensus.py  gui.py  libre_network_gui.py  libre_network_gui.spec  main.py  network.py  p2p_network.py  storage.py  test_save_port.py
libre-network/: Cargo.toml
libre-network/crates/consensus/: Cargo.toml
libre-network/crates/consensus/src/: lib.rs  miners_list.rs  nonce_manager.rs  proof_of_activity.rs  signature_aggregation.rs  update.rs  validator.rs
libre-network/crates/core/: Cargo.toml
libre-network/crates/core/src/: lib.rs  miner.rs  state.rs  (+3 more)
libre-network/crates/network/: Cargo.toml
libre-network/crates/node/: Cargo.toml
libre-network/crates/node/src/: lib.rs  main.rs  miner.rs  node.rs  sync.rs  tx_pool.rs
libre-network/crates/ui/: Cargo.toml
libre-network/crates/ui/src/: app.rs  lib.rs  main.rs  mining_page.rs  network_status_page.rs  settings_page.rs  wallet_page.rs
libre-network/crates/wallet/: Cargo.toml
librenetwork/: database.html  index.html  mining.html  package-lock.json  package.json  wallet.html
librenetwork/css/: style.css
librenetwork/js/: app.js
my-web-app/: README.md
my-web-app/backend/: db.js  index.js
my-web-app/backend/models/: MinerList.js  Transaction.js  Update.js  User.js
my-web-app/backend/routes/: accounts.js  miners.js  transactions.js  updates.js
my-web-app/backend/services/: accountService.js  miningService.js  transactionService.js
my-web-app/frontend/: index.html
my-web-app/frontend/public/: index.html
my-web-app/frontend/src/: App.jsx  main.jsx
(+14 files in other folders)
