[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
core = { path = "../core" }
network = { path = "../network" }
consensus = { path = "../consensus" }
wallet = { path = "../wallet" }
