[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.20"
egui = "0.20"
tokio = { version = "1.0", features = ["full"] }
core = { path = "../core" }
wallet = { path = "../wallet" }
node = { path = "../node" }
serde = { version = "1.0", features = ["derive"] }
